update index file

--- a/index.html
+++ b/index.html
@@ -13,9 +13,15 @@
 
     <main>
       <h1> 
-        Effective Solutions for Your Business 
-        
-
+        Effective Solutions for Your Business
+        width="1440px" 
+        height="600px"
+        font-weight: 700;
+        font-size: 56px;
+        line-height: 1.07143;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #fff;
       </h1>
     
     </main>
