update index file

--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
 </head>
 <body>
     <header>
-        <a href=""></a>
+        <nav>
+            <a href="Web Studio">Web Studio </a>
+            <a href="Studio">Studio</a>
+            <a href="Portfolio">Portfolio</a>
+            <a href="Contacts">Contacts</a>
+            <address>
+               <a href="info@devstudio.com">info@devstudio.com</a> 
+               <a href="">+110001111111</a>+11 (000) 111-11-11
+            </address>
+        </nav>
 
     </header>
 
     <main>
       <h1> 
         Effective Solutions for Your Business
-        width="1440px" 
-        height="600px"
-        font-weight: 700;
-        font-size: 56px;
-        line-height: 1.07143;
-        letter-spacing: 0.02em;
-        text-align: center;
-        color: #fff;
+        <button>Order Service</button>
       </h1>
     
     </main>
