--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <a href="Portfolio">Portfolio</a>
             <a href="Contacts">Contacts</a>
             <address>
-               <a href="info@devstudio.com">info@devstudio.com</a> 
-               <a href="">+110001111111</a>+11 (000) 111-11-11
-            </address>
+                <a href="info@devstudio.com">info@devstudio.com</a> 
+                <a href="">+110001111111</a>+110001111111
+             </address>
         </nav>
 
     </header>
@@ -23,9 +23,43 @@
     <main>
       <h1> 
         Effective Solutions for Your Business
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
       </h1>
-    
+    <section>
+        <h3>Strategy</h3>
+        <p>
+            Our goal is to identify the business
+            problem to walk away with the perfect and creative solution. 
+        </p>
+        <h3>Punctuality</h3>
+        <p>
+            Bring the key message to the brand's audience for the best price within the shortest possible time.
+        </p>
+        <h3>Diligence</h3>
+        <p>
+            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+        </p>
+        <h3>Technologies</h3>
+        <p>
+            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+        </p>
+    </section>
+    <section>
+        <h2>Our Team</h2>
+        <img src="images/img1.jpg" alt="Mark Guerrero" width="264px" height="260px">
+        <h3>Mark Guerrero</h3>
+        <img src="images/img2.jpg" alt="Tom Ford" width="264px" height="260px">
+        <p>Product Designer</p>
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+        <img src="images/img3.jpg" alt="Camila Garcia" width="264px" height="260px">
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+        <img src="images/img4.jpg" alt="Daniel Wilson" width="264px" height="260px">
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
+
+    </section>
     </main>
 
     <footer>
