--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <h2>Our Team</h2>
         <img src="images/img1.jpg" alt="Mark Guerrero" width="264px" height="260px">
         <h3>Mark Guerrero</h3>
-        <img src="images/img2.jpg" alt="Tom Ford" width="264px" height="260px">
         <p>Product Designer</p>
+        <img src="images/img2.jpg" alt="Tom Ford" width="264px" height="260px">
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
         <img src="images/img3.jpg" alt="Camila Garcia" width="264px" height="260px">
@@ -63,7 +63,10 @@
     </main>
 
     <footer>
-
+        <a href="Web Studio">Web Studio </a>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
     </footer>
     
 </body>
