update index file

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <a href="./index.html">Studio</a>
-                <a href="./index.html">Portfolio</a>
-                <a href="./index.html">Contacts</a>
+                <a href="">Studio</a>
+                <a href="">Portfolio</a>
+                <a href="">Contacts</a>
             </ul>
+        </nav>    
             <address>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -23,7 +24,7 @@
                 </li>
                 
              </address>
-        </nav>
+        
 
     </header>
 
