--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul>
-                <a href="">Studio</a>
-                <a href="">Portfolio</a>
-                <a href="">Contacts</a>
+               <li><a href="">Studio</a></li> 
+               <li><a href="">Portfolio</a></li>
+              <li><a href="">Contacts</a></li>
             </ul>
         </nav>    
             <address>
+            <ul>
                 <li>
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
                     <a href="tel:+110001111111">+110001111111</a>+11 (000) 111-11-11
                 </li>
-                
+            </ul>
              </address>
         
 
